# raytracer

./: .gitignore  CMakeLists.txt  README.md  mirror mecha.mtl  result.ppm
dependencies/: README.md
resources/assets/: camera_x_label.pam  fov_label.pam  groupbox.pam  groupbox_long.pam  hgrad_button.pam  label_ambient.pam  label_diffuse.pam  label_gouraud.pam  label_intensity.pam  label_light_intensity.pam  label_meanfilter.pam  label_phong.pam  label_quantization.pam  label_radius.pam  label_roughness.pam  label_shininess.pam  label_specular.pam  meanfilter_button.pam  menu_button.pam  model_x_label.pam  multisample_button.pam  orennayar_button.pam  orennayar_button_alt.pam  phong_button.pam  phong_button_alt.pam  reload_button.pam  reload_shaders_button.pam  shadowmap_button.pam  slider.pam  slider_bar.pam  ssao_button.pam  ssao_button_alt.pam  toon_button.pam  toon_button_alt.pam  vertex0_label.pam  vertex1_label.pam  vertex2_label.pam  vgrad_button.pam
resources/images/: camelo.ppm
resources/models/: GrayScene.mtl  WhitePillarsAndWhiteTiles.mtl  bunny.ply  colorSceneV2.mtl  cube.mtl  dodgeColorTest.mtl  pillars.mtl  plane.mtl  sphere.ply  toy.ply  yellowPillars.mtl  yellowPillarsAndYellowTiles.mtl
resources/shaders/: beziercurve.frag  beziercurve.geom  beziercurve.vert  cameracoords.frag  cameracoords.vert  directcolor.frag  directcolor.vert  gaussianblurfilter.frag  gaussianblurfilter.vert  gradientfilter.frag  meanfilter.frag  meanfilter.vert  normalmap.frag  normalmap.vert  orennayar.frag  orennayar.vert  phongmaterialshader.frag  phongmaterialshader.vert  phongshader.frag  phongshader.vert  phongshadow.frag  phongshadow.vert  renderbuffer.frag  renderbuffer.vert  rendershadowmap.frag  rendertexture.frag  rendertexture.vert  (+14 more)
src/: boundingbox.cpp  boundingbox.hpp  boundingsphere.cpp  boundingsphere.hpp  flyscene.cpp  flyscene.hpp  main.cpp
(+64 files in other folders)
